@@ -65,6 +65,7 @@ Bug fixes
  * Prevent new block IDs from being assigned on repeated calls to ``StreamBlock.get_prep_value`` (Colin Klein)
  * Prevent broken images in notification emails when static files are hosted on a remote domain (Eduard Luca)
  * Replace styleguide example avatar with default image to avoid issues when custom user model is used (Matt Westcott)
+ * ``DraftailRichTextArea`` is no longer treated as a hidden field by Django's form logic (Sergey Fedoseev)
 
 
 Upgrade considerations
